# sgul-client

./: .gitignore  .prettierignore  .prettierrc  README.md  env.example  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/app/game/: layout.tsx  page.tsx
src/app/game/[id]/: page.tsx
src/app/game/[id]/score/: page.tsx
src/app/game/score/: page.tsx
src/app/leaderboard/: page.tsx
src/app/socket/: page.tsx
src/app/test/: page.tsx
src/components/: korean-card-game.tsx  korean-card.tsx  socket-example.tsx  socket-status.tsx
src/components/dialog/: error-dialog.tsx
src/components/ui/: dialog.tsx
src/contexts/: socket-context.tsx
src/hooks/: use-fetch.ts  use-socket.ts
src/lib/: socket.ts
src/types/: card.ts  leaderboard.ts  socket.ts
src/utils/: card.ts  random.ts
